@@ -275,6 +275,9 @@ OCaml 4.04.0:
 
 - GPR#721: Fix infinite loop in flambda due to [@@specialise] annotations
 
+- PR#7299: remove access to OCaml heap inside blocking section in win32unix
+  (David Allsopp, report by Andreas Hauptmann)
+
 ### Internal/compiler-libs changes:
 
 - PR#7200, GPR#539: Improve, fix, and add test for parsing/pprintast.ml
